--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 
-    <button id="burger-box" class="small-nav">
+    <div id="burger-box" class="small-nav">
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div>Menu</div>
-    </button>
+    </div>
 
     <div id="big-nav" class="big-nav">
         <div class="block-letter"><a href="#">P</a></div>
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <div class="main">
+    <div id="page" class="main">
 
         <header>
             <div class="hero-image"></div>
