--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -17,14 +17,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="small-nav">
+    <div id="burger-box" class="small-nav">
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div>Menu</div>
     </div>
 
-    <div class="big-nav">
+    <div id="big-nav" class="big-nav">
         <div class="block-letter"><a href="index.html">P</a></div>
         <ul class="big-nav-list">
             <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
@@ -39,39 +39,46 @@
         </div>
     </div>
 
-    <div id="SCSscheme-page">
+    <div id="page">
 
-        <!-- This page is to describe what the scion scheme is about.-->
+        <div id="SCSscheme-page">
 
-        <h1 id="SCSscheme-title">SCS Scheme</h1>
+            <!-- This page is to describe what the scion scheme is about.-->
 
-        <div id="SCSscheme">
+            <h1 id="SCSscheme-title">SCS Scheme</h1>
 
-            <div class="SCSscheme--card" id="SCSintroduction">
-                <h2 class="SCSscheme--card--title">Introduction to Scion Coalition Scheme</h2>
-                <p class="SCSscheme--card--filler scs-left-align">The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers.<br>
-                    <br>
-                    Under the supervision of senior web developers, scions generally aim to complete training within six to nine months. The course is intensive and therefore the level of learning achieved is extensive in a short space of time.</p>
-            </div>
-            <div class="SCSscheme--card">
-                <h2 class="SCSscheme--card--title">Treehouse</h2>
-                <div class="SCSscheme--card--filler scs-left-align">Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they've covered in certain areas.</div>
-                <h4 class="SCSscheme--card--filler">Score: 10,342</h4>
-                <a href="https://teamtreehouse.com/peterjardine2" target="_blank" class="treehouse_profile">View my Profile</a>
-                <!-- the link above goes to a new page for my treehouse profile -->
-            </div>
-            <div class="SCSscheme--card">
-                <h2 class="SCSscheme--card--title">About Netmatters</h2>
-                <div class="SCSscheme--card--filler netmatters-info-list">Established in 2008<br>
-                    Norfolk's leading technology company<br>
-                    Winner of the Princess Royal Training Award<br>
-                    Winner of EDP Skills of Tomorrow Award<br>
-                    80+ staff, 2 locations across Norfolk<br>
-                    Digital Marketing, Website & Software development & IT Support<br>
-                    Broad spectrum of clients, working nationwide<br>
-                    Operate to strict company values</div>
+            <div id="SCSscheme">
+
+                <div class="SCSscheme--card" id="SCSintroduction">
+                    <h2 class="SCSscheme--card--title">Introduction to Scion Coalition Scheme</h2>
+                    <p class="SCSscheme--card--filler scs-left-align">The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers.<br>
+                        <br>
+                        Under the supervision of senior web developers, scions generally aim to complete training within six to nine months. The course is intensive and therefore the level of learning achieved is extensive in a short space of time.</p>
+                </div>
+                <div class="SCSscheme--card">
+                    <h2 class="SCSscheme--card--title">Treehouse</h2>
+                    <div class="SCSscheme--card--filler scs-left-align">Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they've covered in certain areas.</div>
+                    <h4 class="SCSscheme--card--filler">Score: 11,930</h4>
+                    <a href="https://teamtreehouse.com/peterjardine2" target="_blank" class="treehouse_profile">View my Profile</a>
+                    <!-- the link above goes to a new page for my treehouse profile -->
+                </div>
+                <div class="SCSscheme--card">
+                    <h2 class="SCSscheme--card--title">About Netmatters</h2>
+                    <div class="SCSscheme--card--filler netmatters-info-list">Established in 2008<br>
+                        Norfolk's leading technology company<br>
+                        Winner of the Princess Royal Training Award<br>
+                        Winner of EDP Skills of Tomorrow Award<br>
+                        80+ staff, 2 locations across Norfolk<br>
+                        Digital Marketing, Website & Software development & IT Support<br>
+                        Broad spectrum of clients, working nationwide<br>
+                        Operate to strict company values</div>
+                </div>
             </div>
         </div>
+
     </div>
+
+    <script src="js/nav-menu.js"></script>
+
 </body>
 </html>
