--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
 </head>
 <body>
 
-    <div class="small-nav">
+    <div id="burger-box" class="small-nav">
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div>Menu</div>
     </div>
 
-    <div class="big-nav">
+    <div id="big-nav" class="big-nav">
         <div class="block-letter"><a href="index.html">P</a></div>
         <ul class="big-nav-list">
             <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
@@ -40,35 +40,41 @@
         </div>
     </div>
 
-    <div id="about-page">
+    <div id="page">
 
-        <div id="about-container">
+        <div id="about-page">
 
-            <div id="about-title">
-                <h1>About Me</h1>
-            </div>
+            <div id="about-container">
 
-            <div id="about-me-paragraph">
+                <div id="about-title">
+                    <h1>About Me</h1>
+                </div>
 
-                <h3 class="about-first-line">My name is Peter Jardine, I am a Manchester based developer in training.</h3>
+                <div id="about-me-paragraph">
 
-                <!-- the link in the about area goes to the scs scheme page as it's mentioned in the about section -->
-                <p class="about-paragraphs">
-                    I am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
-                </p>
+                    <h3 class="about-first-line">My name is Peter Jardine, I am a Manchester based developer in training.</h3>
 
-                <p class="about-paragraphs">
-                    I have been learning front end development, with HTML and CSS courses. Recently I have started learning about the back end of web development with Javascript and Jquery.
-                </p>
+                    <!-- the link in the about area goes to the scs scheme page as it's mentioned in the about section -->
+                    <p class="about-paragraphs">
+                        I am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
+                    </p>
 
-                <p class="about-paragraphs">
-                    When learning new things, I have then attempted to apply what I have learned to a personal project. A strat roulette for a game, which with the press of a button the players would recieve challenges to make the game harder or more fun. 
-                </p>
+                    <p class="about-paragraphs">
+                        I have been learning front end development, with HTML and CSS courses. Recently I have started learning about the back end of web development with Javascript and Jquery.
+                    </p>
+
+                    <p class="about-paragraphs">
+                        When learning new things, I have then attempted to apply what I have learned to a personal project. A strat roulette for a game, which with the press of a button the players would recieve challenges to make the game harder or more fun. 
+                    </p>
+                </div>
+
             </div>
 
         </div>
 
     </div>
+
+    <script src="js/nav-menu.js"></script>
 
 </body>
 </html>
