--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
-        <div>Menu</div>
+        <div class="menu">Menu</div>
     </div>
 
     <div id="big-nav" class="big-nav">
@@ -167,6 +167,7 @@
             </a>
         </div>    
 
+        <div id="menu-overlay"></div>
     </div>
 
     <!-- these allow for the typewriter to work -->
