--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
-        <div>Menu</div>
+        <div class="menu">Menu</div>
     </div>
 
     <div id="big-nav" class="big-nav">
