Changed the way I work the nav menu

--- a/coding.html
+++ b/coding.html
@@ -22,6 +22,7 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div class="menu">Menu</div>
+        <span class="close-menu">x</span>
     </div>
 
     <div id="big-nav" class="big-nav">
@@ -39,7 +40,7 @@
         </div>
     </div>
 
-    <div id="page">
+    <div id="menu-showing">
 
         <div id="coding-container">
 
