--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div class="menu">Menu</div>
+        <span class="close-menu">x</span>
     </div>
 
     <div id="big-nav" class="big-nav">
@@ -40,7 +41,7 @@
         </div>
     </div>
 
-    <div id="page" class="main">
+    <div id="menu-showing" class="main">
 
         <header>
             <div class="hero-image"></div>
