--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div class="menu">Menu</div>
+        <span class="close-menu">x</span>
     </div>
 
     <div id="big-nav" class="big-nav">
@@ -40,7 +41,7 @@
         </div>
     </div>
 
-    <div id="page">
+    <div id="menu-showing">
 
         <div id="about-page">
 
