Fixed sizing and margins/paddings

--- a/coding.html
+++ b/coding.html
@@ -22,7 +22,7 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <div class="menu">Menu</div>
-        <span class="close-menu">x</span>
+        <span class="close-menu">x</span> <!-- Only shows when the menu is open to signify the change in the function-->
     </div>
 
     <div id="big-nav" class="big-nav">
@@ -100,6 +100,7 @@
 
     </div>
 
+    <!-- Script for running the menu interaction -->
     <script src="js/nav-menu.js"></script>
 
 </body>
