--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div id="projects" class="projects-container">
             
                 <!-- add a transition to the project titles and descriptions to move up on hover -->
-                <div id="project-one" class="project project-mainpage">
+                <div id="project-one" class="project project-1">
                     <div class="project-background"></div>
-                    <div class="project-title">Netmatters Site Fascimilie 
+                    <div class="project-title project-title-filled">Netmatters Site Fascimilie 
                         <p class="project-description">My copy of the main Netmatters webpage. Primarily using HTML and CSS.</p>
                     </div>
                     <div class="project-buttons">
@@ -76,9 +76,9 @@
                     </div>
                 </div>
 
-                <div id="project-two" class="project project-mainpage">
+                <div id="project-two" class="project project-2">
                     <div class="project-background"></div>
-                    <div class="project-title">Axure Shopfront
+                    <div class="project-title project-title-filled">Axure Shopfront
                         <p class="project-description">Using Axure I made a shop front using conditionals to connect pages and checkout page to hold the items.</p>
                     </div>
                     <div class="project-buttons">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div id="project-three" class="project project-mainpage">
+                <div id="project-three" class="project project-3">
                     <div class="project-background"></div>
                     <div class="project-title">Project title
                         <p class="project-description"></p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <div id="project-four" class="project project-mainpage">
+                <div id="project-four" class="project project-4">
                     <div class="project-background"></div>
                     <div class="project-title">Project title
                         <p class="project-description"></p>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
 
-                <div id="project-five" class="project project-mainpage">
+                <div id="project-five" class="project project-5">
                     <div class="project-background"></div>
                     <div class="project-title">Project title
                         <p class="project-description"></p>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                <div id="project-six" class="project project-mainpage">
+                <div id="project-six" class="project project-6">
                     <div class="project-background"></div>
                     <div class="project-title">Project title
                         <p class="project-description"></p>
