Added links to the pairs project.

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 
                 <div id="project-three" class="project project-3">
                     <div class="project-background"></div>
-                    <div class="project-title">Project title
-                        <p class="project-description"></p>
+                    <div class="project-title">Group project
+                        <p class="project-description">I was grouped with some other scions for a project and we made this site.</p>
                     </div>
                     <div class="project-buttons">
-                        <a href="#projects" class="project-button">Project</a>
-                        <a href="#projects" class="project-button">Read More</a>
+                        <a href="http://bakers-dozen.peter-jardine.netmatters-scs.co.uk/" class="project-button">Project</a>
+                        <a href="https://github.com/donk3ylee/trifecta-perfecta" class="project-button">Github</a>
                     </div>
                 </div>
 
