--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <input class="contact-form-input" id="client-email" type="email" placeholder="Email*" >
                     <input class="contact-form-input" id="email-subject" type="text" placeholder="Subject*" required>
                     <textarea class="contact-form-input" id="message" rows="40" cols="40" placeholder="Message*" required></textarea>
-                    <button id="contact-form-submit" type="submit" onsubmit="validateForm()">Submit</button>
+                    <button id="contact-form-submit">Submit</button>
                 </form>
                 
             </div>
