--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
             </div>
 
         </div>
+        <div id="message-status-area">
+            <p id="successBar" class="form-status-bar">Your message has been successfully sent.</p>
+            <p id="failedBar" class="form-status-bar">Your message has failed to send. Please fill out the fields correctly.</p>
+        </div>
 
         <footer id="contact-area">
             <div id="contact--area">
@@ -151,18 +155,15 @@
                     </div>
                 </div>
 
-                <!-- <div>
-                <p id="successBar" class="form-status-bar">Your message has been successfully sent.</p>
-                <p id="failedBar" class="form-status-bar">Your message has failed to send. Please fill out the fields correctly.</p>
-                </div> -->
+                
                 <form id="contact-form">
                     <!-- A basic form to contact me -->
                     <input class="contact-form-input" id="contact-form-first" type="text" placeholder="First Name*" required>
                     <input class="contact-form-input" id="contact-form-last" type="text" placeholder="Last Name*" required>
-                    <input class="contact-form-input" id="client-email" type="email" placeholder="Email*" >
+                    <input class="contact-form-input" id="client-email" type="email" placeholder="Email*" required>
                     <input class="contact-form-input" id="email-subject" type="text" placeholder="Subject*" required>
                     <textarea class="contact-form-input" id="message" rows="40" cols="40" placeholder="Message*" required></textarea>
-                    <button id="contact-form-submit">Submit</button>
+                    <button id="contact-form-submit" type="submit">Submit</button>
                 </form>
                 
             </div>
