small changes to fix links

--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
     </div>
 
     <div id="big-nav" class="big-nav">
-        <div class="block-letter"><a href="index.html">P</a></div>
+        <div class="block-letter"><a href="index.php">P</a></div>
         <ul class="big-nav-list">
-            <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
+            <li><strong><a href="index.php#projects">My Portfolio</a></strong></li>
             <li><strong><a class="currentPage" href="#">About Me</a></strong></li>
             <li><strong><a href="coding.html">Coding Examples</a></strong></li>
             <li><strong><a href="SCSscheme.html">SCS Scheme</a></strong></li>
