Fixed most of the issues raised by Kayleigh

--- a/coding.html
+++ b/coding.html
@@ -98,7 +98,7 @@
 
                 <h3  class="SQL-explanation">The database I used for formatting my SQL Query</h3>
 
-                <img src="assets\soccer-database.png" alt="This shows a database of football information" id="SQL-image">
+                <img src="assets/soccer-database.png" alt="This shows a database of football information" id="SQL-image">
 
                 <h3  class="SQL-explanation">Below are the extracts I am using.</h3>
                 
