Fixed and tested the read more

--- a/coding.html
+++ b/coding.html
@@ -148,7 +148,10 @@
         160034 |    1202 |         8 | David Alaba             | MF           | 1992-06-24 |  23 | Bayern
         160046 |    1202 |         9 | Rubin Okotie            | FD           | 1987-06-06 |  29 | 1860 Munchen
         160040 |    1202 |        10 | Zlatko Junuzovic        | MF           | 1987-09-26 |  28 | Bremen
+        </div>
         <div id="playerLess" class="showLess">Show Less</div>
+        <div id='players-readMore-one' class="readMore extraRead">Read More</div>
+        <div id="player-table-readMore-one" class="isMore">
         160037 |    1202 |        11 | Martin Harnik           | MF           | 1987-06-10 |  29 | Stuttgart
         160025 |    1202 |        12 | Heinz Lindner           | GK           | 1990-07-17 |  25 | Frankfurt
         160032 |    1202 |        13 | Markus Suttner          | DF           | 1987-04-16 |  29 | Ingolstadt
@@ -173,7 +176,10 @@
         160067 |    1203 |         9 | Romelu Lukaku           | FD           | 1993-05-13 |  23 | Everton
         160062 |    1203 |        10 | Eden Hazard             | MF           | 1991-01-07 |  25 | Chelsea
         160058 |    1203 |        11 | Yannick Carrasco        | MF           | 1993-09-04 |  22 | Atletico
+        </div>
         <div id="playerLess-One" class="showLess">Show Less</div>
+        <div id='players-readMore-Full' class="readMore extraRead">Read Full</div>
+        <div id="player-table-readMore-Full" class="isMore">
         160049 |    1203 |        12 | Simon Mignolet          | GK           | 1988-08-06 |  27 | Liverpool
         160048 |    1203 |        13 | Jean-Francois Gillet    | GK           | 1979-05-31 |  37 | Mechelen
         160068 |    1203 |        14 | Dries Mertens           | FD           | 1987-05-06 |  29 | Napoli
