--- a/coding.html
+++ b/coding.html
@@ -48,6 +48,13 @@
 
             <div class="coding-example">
                 <div class="coding-example-title">Randomised comparing functions</div>
+
+                <div>
+                    <p>
+                        This shows a group of functions that takes a randomised selection from the variable at the top of the code window, then in the following two functions compare the results to the results from the previous functions.
+                    </p>
+
+                </div>
                 
                 <div class="coding-example-code">
                     <!-- this window is to be used to show code, each of the spans are used to hold different elements -->
